<resources>
    <string name="app_name">NetworkRouterManager</string>
    <string name="title_activity_main2" translatable="false">Leanback Main2Activity Title</string>
    <string name="browse_title" translatable="false"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1" translatable="false">Watch trailer</string>
    <string name="watch_trailer_2" translatable="false">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1" translatable="false">Buy and Own</string>
    <string name="buy_2" translatable="false">AT $9.99</string>
    <string name="movie" translatable="false">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="add_router">添加路由器</string>
    <string name="icon">icon</string>

    <string name="msg_return">再按一次返回键退出</string>

    <string name="connected">已连设备</string>
    <string name="forbidden">已禁设备</string>
    <string name="forbidden_release_device">解除设备</string>
    <string name="forbidden_device">禁用设备</string>

    <string name="PPOE">宽带拨号上网</string>
    <string name="static_ip">固定IP地址</string>
    <string name="IP_address_auto">自动获取IP地址</string>

    <string name="more" translatable="false">more</string>

    <string name="devices_managment">连接设备管理</string>
    <string name="network_managment">上网管理</string>
    <string name="wireless_setting">无线设置</string>

    <string name="setup_wizard">设置向导</string>
    <string name="exit_safe">安全退出</string>

    <string name="network_param">网络参数</string>
    <string name="network_param_wan">WAN口设置</string>
    <string name="newwork_param_lan">LAN口设置</string>
    <string name="network_param_lan">DHCP服务器</string>
    <string name="network_param_mac">Mac地址</string>
    <string name="network_param_dhcp">DHCP服务器</string>
    <string name="network_param_bind">IP与MAC绑定设置</string>

    <string name="wireless_setting_host">主人网络</string>
    <string name="wireless_setting_guest">访客网络</string>
    <string name="wireless_setting_wds">WDS</string>

    <string name="advanced_account_virtual_server">虚拟服务器</string>
    <string name="advanced_account_dmz">DMZ主机</string>
    <string name="advanced_account_UPnP">UPnP设置</string>
    <string name="advanced_account_router">路由功能</string>
    <string name="advanced_account_ddns">DDNS</string>

    <string name="device_management">软件管理</string>
    <string name="device_management_language">时间和语言</string>
    <string name="device_management_update">软件升级</string>
    <string name="device_management_reset">恢复出厂设置</string>
    <string name="device_management_restart">重启路由器</string>
    <string name="device_management_backup">备份</string>
    <string name="device_management_change">修改登录密码</string>
    <string name="device_management_diagnostic">诊断工具</string>
    <string name="device_management_syslog">系统日志</string>

    <string name="commonsetting">常用设置</string>
    <string name="advancedsetting">高级设置</string>
    <string name="accountmanagerment">用户管理</string>
    
    <string name="time_zone_setting">时区设置</string>
    <string name="language_setting">语言设置</string>

    <string name="wireless_name">无线名称</string>
    <string name="wireless_psw">无线密码</string>
    <string name="default_psw">12345678</string>

    <string name="broadband_psw">宽带密码</string>
    <string name="broadband_account">宽带账号</string>

    <string name="ip_address">IP 地址</string>
    <string name="mac_address">MAC 地址</string>
    <string name="subnet_mask">子网掩码</string>
    <string name="gateway">网关</string>
    <string name="preferred_dns_server">首选DNS服务器</string>
    <string name="spare_dns_server">备用DNS服务器</string>

    <string name="data_pack_mtu_byte">数据包MTU字节</string>
    <string name="host_name">主机名</string>
    <string name="wan_port_setting">WAN口速率设置</string>

    <string name="dns_server">DNS服务器</string>

    <string name="save">保存</string>
    <string name="default_wireless_name">SiWiFi-db5c-2.4G</string>
    <string name="anonymous_host">匿名主机</string>
    <string name="dns_server_setting_manual">手动设置DNS服务器</string>
    <string name="unicast_mode">单播方式获取IP一般情况下请勿选择</string>

    <string name="update">更新</string>
    <string name="release">释放</string>

    <string name="lan_prot_setting">LAN口设置</string>
    <string name="upload_download_limit">上传限制　下载限制　禁用设备</string>
    <string name="unlimit">解禁设备</string>
    <string name="no_psw">不加密</string>
    <string name="successful_save">保存成功</string>
    <string name="unsuccessful_save">保存失败</string>
    <string name="setting_successful">设置成功</string>
    <string name="setting_unsuccessful">设置失败</string>
    <string name="network_mode">上网方式</string>

    <string name="wireless_one" translatable="false">2.4G</string>
    <string name="wireless_two" translatable="false">5G</string>

    <string name="interview_intranet_resource">访问内网资源</string>
    <string name="maximum_upload_speed">访客网络最大上传速度</string>
    <string name="maximum_download_speed">访客网络最大下载速度</string>
    <string name="opening_hours">是否设置访客网络开放时间</string>
    <string name="channel">信道</string>
    <string name="mode">模式</string>
    <string name="bandwidth">频段带宽</string>
    <string name="signal_strength">信号强度</string>
    <string name="ap_isolation">开启AP隔离</string>

    <string name="reset">恢复出厂设置</string>
    <string name="restart">重启路由器</string>
    <string name="hint_reset">单击此按钮将使路由器所有设置恢复到出厂时的默认状态</string>

    <string name="old_password">原登录密码</string>
    <string name="new_password">新登录密码</string>
    <string name="confirm_password">确认新登陆密码</string>

    <string name="update_hint">请选择升级软件,软件点击升级按钮进行升级</string>
    <string name="save_config">是否保留配置</string>
    <string name="current_software">当前软件版本</string>
    <string name="software_update">软件升级</string>
    <string name="ota_software_update">OTA软件升级</string>
    <string name="ota_online_update">OTA在线升级</string>
    <string name="browse">浏览</string>

    <string name="wds_setup_wizard">WDS 网组向导</string>
    <string name="wds_setup_wizard_hint">通过WDS功能，主,从路由器之间可以通过无线进行桥接,以扩展无线网络的覆盖范围.  开启WDS功能之后，本路由器将作为从路由器进行WDS组网</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>

    <string name="intranet_resource">是否设置访客访问内网资源</string>
    <string name="guest_network_download_speed">访客网络最大下载速度</string>
    <string name="guest_network_upload_speed">访客网络最大上传速度</string>
    <string name="guest_network_opening_time">是否设置访客网络开放时间</string>
    <string name="_0_0_0_0">0.0.0.0</string>
    <string name="data_pack_hint">The default is 1500. If a is not necessary, please do not modify it.</string>
    <string name="default_data_pack">1500</string>
    <string name="upload">上传速率</string>
    <string name="download">下载速率</string>
    <string name="unit" translatable="false">b/s</string>
    <string name="forget_password_hint">如果忘记密码，请恢复出厂设置.恢复出厂设置：当设备通电时，按住Reset按钮直到所有指示灯同事亮起后松开</string>
    <string name="speed_setting">速率设置</string>
    <string name="current_hardware">当前硬件版本</string>
    <string name="simpledateformat" translatable="false">yyyy-MM-dd</string>
    <string name="device__language">时间和语言</string>
    <string name="hint_update">请确认是否升级路由器,如果升级,需要等待3-5分钟,升级中请不要断开电源</string>
    <string name="update_error">OTA版本信息获取失败</string>
    <string name="update_nor">已经是最新版本，不需要升级</string>
    <string name="status_download_mirror_error">下载OTA升级包出错，请点确定重试</string>
    <string name="wds_hint_one">通过WDS功能，主，从路由器之间可以通过无线进行桥接，以扩展无线网络的覆盖范围．</string>
    <string name="wds_hint_two">开启WDS功能之后，本路由器将作为从路由器进行WDS组网</string>
    <string name="wds_title">选选择你要要接接的️️主由由器</string>
    <string name="signal_strength">信号强度</string>
    <string name="wireless_name">无线名称</string>
    <string name="enciphered_message">加密信息</string>
    <string name="choose">选择</string>

</resources>
