<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/device_management_update"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/update_hint"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_software"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/browse" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_software"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_config"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/save_config" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/software_update" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_current_hardware"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/current_hardware" />

        <TextView
            android:id="@+id/tv_hardware"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_current_software"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/current_software" />

        <TextView
            android:id="@+id/tv_software"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ota_online_update"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_ota_update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ota_software_update" />

</LinearLayout>