<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="450dp"
    android:layout_height="450dp"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_upload"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/upload"
        android:inputType="number"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_download"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/download"
        android:inputType="number"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_forbidden"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/forbidden_release_device" />

</LinearLayout>