<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:tabIndicatorColor="@android:color/white"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextAppearance="@style/tab_appearance"
            app:tabTextColor="#EF9A9A" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/frameLayout_wireless_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/wireless_name"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/black" />

            <EditText
                android:id="@+id/et_wireless_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/default_wireless_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/wireless_psw"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/black" />

            <EditText
                android:id="@+id/et_wireless_psw"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/default_psw" />

            <CheckBox
                android:id="@+id/cb_no_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_psw"
                android:background="@null" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_wireless_setting_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/save"
            android:textSize="20sp" />

    </LinearLayout>
</FrameLayout>