<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lb_tv_white"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <!--实现背景用背景图片,最先呈现到用户面前，
        之后logo和相应的登录按钮　浮现（渐现效果动画）　
        作为launcher页和登录页的整体实现-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/lb_grey">

        <!--左边可以实现ｂanner效果，切换背景图片以展示效果-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="左边logo"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/input_password"
            android:textColor="@color/lb_playback_controls_background_light"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_password"
            android:layout_centerInParent="true"
            android:background="@null"
            android:text="@string/forget_password" />

    </RelativeLayout>

</LinearLayout>