<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout_wireless_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ip_address"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/et_ip_address"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_0_0_0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_subnet_mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/subnet_mask"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/et_subnet_mask"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_0_0_0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gateway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/gateway"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/et_gateway"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_0_0_0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_preferred_dns_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/preferred_dns_server"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/et_preferred_dns"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_0_0_0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_spare_dns_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/spare_dns_server"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/et_spare_dns"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_static_address_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/save"
        android:textSize="20sp" />

</LinearLayout>